--- a/FunCalc/FunCalc/Base.lproj/Main.storyboard
+++ b/FunCalc/FunCalc/Base.lproj/Main.storyboard
@@ -16,15 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="th3-wJ-dnA">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="test" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="th3-wJ-dnA">
                                 <rect key="frame" x="159" y="28" width="302" height="256"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="115" y="36" width="170" height="169"/>
+                                    <rect key="frame" x="16" y="35" width="269" height="169"/>
                                 </variation>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ec0-tl-dXV">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Clear">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="275" width="76" height="54"/>
+                                </variation>
+                                <connections>
+                                    <action selector="clearCalc:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="9ev-9p-tWc"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mz2-f3-0b0">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
@@ -32,7 +44,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="273" y="275" width="73" height="58"/>
+                                    <rect key="frame" x="212" y="273" width="73" height="58"/>
                                 </variation>
                                 <connections>
                                     <action selector="mainCalc:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="fqq-uX-J15"/>
@@ -45,32 +57,12 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="273" y="275" width="73" height="58"/>
+                                    <rect key="frame" x="212" y="273" width="73" height="58"/>
                                 </variation>
                                 <connections>
                                     <action selector="mainCalc:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="dt1-Rw-D0D"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hct-1e-6T8">
-                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="138" y="468" width="97" height="30"/>
-                                </variation>
-                                <connections>
-                                    <action selector="checkResultView:" destination="vXZ-lx-hvc" eventType="valueChanged" id="zkq-tY-2vQ"/>
-                                </connections>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZl-pK-6cJ">
-                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="138" y="360" width="105" height="68"/>
-                                </variation>
-                            </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sjk-7t-2sR">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
@@ -78,44 +70,60 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="273" y="275" width="73" height="58"/>
+                                    <rect key="frame" x="212" y="273" width="73" height="58"/>
                                 </variation>
                                 <connections>
                                     <action selector="mainCalc:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="NHf-Mt-sMd"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ec0-tl-dXV">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" title="Clear">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="CZl-pK-6cJ">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="26" y="277" width="76" height="54"/>
+                                    <rect key="frame" x="16" y="337" width="269" height="68"/>
                                 </variation>
-                                <connections>
-                                    <action selector="clearCalc:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="9ev-9p-tWc"/>
-                                </connections>
-                            </button>
+                            </textView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vC9-Ca-oyT">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="102" y="454" width="97" height="30"/>
+                                </variation>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOM-as-7eU">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="83" y="201" width="135" height="45"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
                             <mask key="subviews">
+                                <exclude reference="Ec0-tl-dXV"/>
                                 <exclude reference="mz2-f3-0b0"/>
                                 <exclude reference="7cH-AA-0h0"/>
-                                <exclude reference="Hct-1e-6T8"/>
-                                <exclude reference="CZl-pK-6cJ"/>
                                 <exclude reference="Sjk-7t-2sR"/>
-                                <exclude reference="Ec0-tl-dXV"/>
+                                <exclude reference="CZl-pK-6cJ"/>
+                                <exclude reference="vC9-Ca-oyT"/>
+                                <exclude reference="qOM-as-7eU"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
+                                <include reference="Ec0-tl-dXV"/>
                                 <include reference="mz2-f3-0b0"/>
                                 <include reference="7cH-AA-0h0"/>
-                                <include reference="Hct-1e-6T8"/>
-                                <include reference="CZl-pK-6cJ"/>
                                 <include reference="Sjk-7t-2sR"/>
-                                <include reference="Ec0-tl-dXV"/>
+                                <include reference="CZl-pK-6cJ"/>
+                                <include reference="vC9-Ca-oyT"/>
+                                <include reference="qOM-as-7eU"/>
                             </mask>
                         </variation>
                     </view>
@@ -123,15 +131,16 @@
                         <outlet property="calculationHolder" destination="th3-wJ-dnA" id="o98-fR-E4y"/>
                         <outlet property="calculationTotal" destination="CZl-pK-6cJ" id="lm3-Vl-7dA"/>
                         <outlet property="finishButton" destination="7cH-AA-0h0" id="te1-Sn-0a4"/>
+                        <outlet property="nextButton" destination="qOM-as-7eU" id="xXk-yM-83v"/>
                         <outlet property="nextButton2" destination="Sjk-7t-2sR" id="Wg6-kF-Kir"/>
                         <outlet property="resultsTextView" destination="CZl-pK-6cJ" id="AYt-0L-XcR"/>
                         <outlet property="startButton" destination="mz2-f3-0b0" id="MfF-BD-k0L"/>
-                        <outlet property="userResult" destination="Hct-1e-6T8" id="rlw-Ss-vdj"/>
+                        <outlet property="userResult" destination="vC9-Ca-oyT" id="4ZO-wa-teT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="304.5" y="369.75"/>
+            <point key="canvasLocation" x="507" y="369.75"/>
         </scene>
     </scenes>
 </document>
